# Nmap Changelog ($Id$); -*-text-*-

4.69BETA1

o zenmap scan inventory place holder.

o zenmap radialnet integration place holder.

o Expanded nmap-services to include information on how frequently each
  port number is found open.  The results were generated by scanning
  tens of millions of IPs on the Internet. [Fyodor]

o Nmap now scans the most common 1,000 ports by default in either
  protocol (UDP scan is still optional).  This is a decrease from
  1,715 TCP ports and 1,488 UDP ports in Nmap 4.68.  So Nmap is faster
  by default and, since the port selection is better, often finds more
  of the open ports as well. [Fyodor]

o Nmap fast scan (-F) now scans the top 100 ports by default in either
  protocol.  This is a decrease from 1,276 (TCP) and 1,017 (UDP) in
  Nmap 4.68, leading to an order of magnitude decrease in port
  scanning time. [Fyodor]

o The --top-ports option lets you specify the number of ports you wish
  to scan in each protocol, and will pick the most popular ports for
  you based on the new frequency data.  For both TCP and UDP, the top
  10 ports gets you roughly half of the open ports.  The top 1,000
  (out of 65,536 possible) finds roughly 93% of the open TCP ports and
  more than 95% of the open UDP ports. [Fyodor]

o David integrated all of your OS detection fingerprint and correction
  submissions from March 11 until mid-July.  In the process we reached
  the 1500-signature milestone for the 2nd generation OS detection
  system. We can now detect the newest iPhones, Linux 2.6.25, OS X
  Darwin 9.2.2, Windows Vista SP1, and even the Nintendo Wii. Nmap now
  has 1,503 signatures, vs. 1,320 in 4.68. Integration is now faster
  and more pleasant thanks to the new OSassist application developed
  by Nmap SoC student Michael Pattrick. See
  http://seclists.org/nmap-dev/2008/q3/0089.html and
  http://seclists.org/nmap-dev/2008/q3/0139.html for more details.

o Nmap now works with Windows 2000 again, after version 4.68 was